# cr-desktop

./: .gitignore  CLAUDE.md  Cargo.toml  IMPLEMENTATION_SUMMARY.md  LICENSE  README.md  TASK_QUEUE.md
.claude/: settings.local.json
cloudreve-api/src/: client.rs  error.rs
cloudreve-api/src/api/: explorer.rs
cloudreve-api/src/models/: common.rs  explorer.rs  site.rs  user.rs  workflow.rs
crates/cloudreve-api/src/: client.rs
crates/cloudreve-sync/: Cargo.toml
crates/cloudreve-sync/src/: config.rs  lib.rs
crates/cloudreve-sync/src/cfapi/: placeholder.rs
crates/cloudreve-sync/src/cfapi/command/: commands.rs
crates/cloudreve-sync/src/cfapi/filter/: async_filter.rs  proxy.rs
crates/cloudreve-sync/src/cfapi/root/: connect.rs  session.rs
crates/cloudreve-sync/src/drive/: callback.rs  commands.rs  event_blocker.rs  ignore.rs  manager.rs  mounts.rs  placeholder.rs  sync.rs  utils.rs
crates/cloudreve-sync/src/drive/manager/: command_handlers.rs  mod.rs  types.rs
crates/cloudreve-sync/src/events/: mod.rs
crates/cloudreve-sync/src/inventory/db/: file_metadata.rs
crates/cloudreve-sync/src/shellext/: custom_state.rs  shell_service.rs  status_ui.rs  toast.rs
crates/cloudreve-sync/src/shellext/context_menu/: explorer_command.rs  mod.rs
crates/cloudreve-sync/src/uploader/: session.rs
crates/cloudreve-sync/src/utils/: toast.rs
crates/win32_notif/: Cargo.toml  Cargo.toml.orig  README.md  r.rs
crates/win32_notif/examples/: bind.rs  downloading.rs  expires.rs  input.rs  lunch.rs  readme.rs  select.rs  simple.rs
crates/win32_notif/src/: lib.rs
crates/win32_notif/src/structs/: data.rs  mod.rs
crates/win32_notif/src/structs/handler/: activated.rs  dismissed.rs  failed.rs  mod.rs
crates/win32_notif/src/structs/notification/: mod.rs
crates/win32_notif/src/structs/notification/widgets/: audio.rs  commands.rs  header.rs  mod.rs  raw_xml.rs
crates/win32_notif/src/structs/notification/widgets/actions/: action.rs  input.rs  mod.rs
crates/win32_notif/src/structs/notification/widgets/group/: group.rs  mod.rs  subgroup.rs
crates/win32_notif/src/structs/notification/widgets/visual/: image.rs  mod.rs  progress.rs  text.rs
crates/win32_notif/src/structs/notifier/: activator.rs  mod.rs
locales/: app.yaml
migrations/inventory/0001_create_file_metadata/: up.sql
migrations/inventory/0002_create_task_queue/: up.sql
migrations/inventory/0004_add_storage_policy/: down.sql  up.sql
package/: AppxManifest.xml
src/: logging.rs  main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  event_handler.rs  lib.rs
src/api/: handlers.rs  mod.rs  task_handlers.rs
src/cfapi/: metadata.rs  mod.rs  placeholder.rs  placeholder_file.rs  usn.rs  utility.rs
src/cfapi/command/: commands.rs  executor.rs
src/cfapi/ext/: file.rs
src/cfapi/filter/: async_filter.rs  info.rs  mod.rs  proxy.rs  request.rs  sync_filter.rs  ticket.rs
src/cfapi/root/: connect.rs  session.rs  sync_root_id.rs  sync_root_info.rs
src/drive/: callback.rs  commands.rs  event_blocker.rs  favicon.rs  ignore.rs  manager.rs  mod.rs  mounts.rs  placeholder.rs  remote_events.rs  sync.rs  utils.rs
src/inventory/: README.md  db.rs  mod.rs  models.rs  schema.rs
src/inventory/db/: file_metadata.rs  upload_sessions.rs
src/shellext/: context_menu.rs  mod.rs  shell_service.rs  status_ui.rs  toast.rs  vector.rs
src/shellext/context_menu/: explorer_command.rs  factory.rs  mod.rs  sub_commands.rs  sync_now.rs  view_online.rs
src/tasks/: download.rs  manager.rs  mod.rs  models.rs  queue.rs  types.rs  upload.rs  worker.rs
src/uploader/: chunk.rs  mod.rs  progress.rs  session.rs
src/uploader/providers/: local.rs  mod.rs  onedrive.rs  qiniu.rs  s3.rs  upyun.rs
src/utils/: app.rs  mod.rs  toast.rs
ui/: index.html  package.json
ui/public/locales/de/: common.json
ui/public/locales/en-US/: common.json
ui/public/locales/es/: common.json
ui/public/locales/fr/: common.json
ui/public/locales/it/: common.json
ui/public/locales/ja/: common.json
ui/public/locales/ja-JP/: common.json
ui/public/locales/ko/: common.json
ui/public/locales/pl/: common.json
ui/public/locales/ru/: common.json
ui/public/locales/zh-CN/: common.json
ui/public/locales/zh-TW/: common.json
ui/src/: App.tsx  i18n.ts  index.css  theme.ts
ui/src/common/: CloudreveLogo.tsx  StyledComponent.tsx
ui/src/common/icons/: HardDrive.tsx  Info.tsx  Settings.tsx
ui/src/hooks/: useIsWindows10.ts
ui/src/pages/: AddDrive.tsx
ui/src/pages/popup/: DriveChips.tsx  FileIcon.tsx  TaskItem.tsx  index.tsx  types.ts  utils.ts
ui/src/pages/settings/: AboutSection.tsx  DrivesSection.tsx  GeneralSection.tsx  index.tsx  types.ts
ui/src/utils/: constants.ts  pkce.ts  siteValidation.ts
