[package]
name = "cloudreve-sync"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
axum = { version = "0.7", features=["macros"]}
axum-macros = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio-stream = { version = "0.1", features = ["sync"] }
dirs = "5.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
tracing-appender = "0.2"
tower-http = { version = "0.5", features = ["trace", "cors"] }
futures = "0.3"

[dependencies.uuid]
version = "1.6"
features = ["v4", "serde"]
