[package]
name = "cloudreve-desktop"
version = "0.1.0"
description = "Cloudreve Desktop Sync Client"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.5", features = ["tray-icon"] }
tauri-plugin-log = "2"
tokio = { version = "1.35", features = ["full"] }
tracing = "0.1"
anyhow = "1.0"
rust-i18n = "3"
sys-locale="0"

# Main sync service crate
cloudreve-sync = { path = "../crates/cloudreve-sync" }

tauri-plugin-frame = "1.1.6"
tauri-plugin-http = "2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"
